# TP2Algoritmos

./: .cproject  .project  CMakeLists.txt  README.md  compilado  manuales.odt
src/: .JuegoDeLaVida.cpp.swp  .cproject  .project  Bits.cpp  Bits.h  Celula.cpp  Celula.h  Colores.cpp  Colores.h  Gen.cpp  Gen.h  GenSeguimiento.cpp  GenSeguimiento.h  ImpresoraDeImagenes.cpp  ImpresoraDeImagenes.h  InformacionGenetica.cpp  InformacionGenetica.h  Informes.cpp  Informes.h  Intensidad.cpp  Intensidad.h  InterfazUsuario.cpp  InterfazUsuario.h  JuegoDeLaVida.cpp  JuegoDeLaVida.h  Lista.h  Nodo.cpp  Nodo.h  Prueba.txt  Seguimiento.cpp  Seguimiento.h  Tablero.cpp  Tablero.h  aplicacion  informes.cpp  informes.h  main.cpp
